[tool.poetry]
name = "webhooktester"
version = "0.1.0"
description = "WebHook Tester"
authors = ["Quali <devops@quali.com>"]

include = ["webhooktester/py.typed"]
exclude = ["webhooktester/**/*_tests.py", "webhooktester/**/conftest.py"]

[tool.poetry.scripts]
webhookserver = 'webhooktester.main:main'

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.5"}

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.13.0"
pytest = "^8.3.3"

[tool.black]
line-length = 119

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 119
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
disallow_untyped_decorators = true
disallow_untyped_calls = true
implicit_optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
